fix scrollbar

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -31,6 +31,12 @@
 
 
 
+/*fix for scrollbar repositioning*/
+html {
+  overflow-y: scroll;
+}
+
+
 .site-header {
   border-top: 6px solid #4a788c;      
 }
